# demo-app-genai-backend

./: .env.docker  .env.minikube  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-code-quality.yaml  ci-docker-build-push.yaml  evaluate-and-promote-rag.yaml  rag-evaluation.yaml
scripts/: debug_retrieval.py  register_prompts.py  test_streaming_curl.sh
src/: _config.py  _logging.py  main.py  test.py
src/api/: __init__.py  deps.py  main.py  schemas.py
src/api/routes/: __init__.py  admin.py  debug.py  health.py  query.py  session.py
src/core/: __init__.py  config.py  database.py  logging.py  tracing.py
src/evaluation/: evaluate_promts.py  register_prompts.py
src/prompts/: __init__.py  evaluate_prompts.py  evaluate_promts.py  register_prompts.py
src/rag/: __init__.py  chain copy.py  chain.py  embeddings.py
src/schemas/: __init__.py  admin.py  common.py  debug.py  health.py  query.py  session.py
tests/: test_retrieval.py  test_streaming.py
